# Game3

./: CMakeLists.txt  CMakePresets.json  Console.cpp  Console.h  ConsoleBackspacePressedEvent.h  ConsoleDeletePressedEvent.h  ConsoleEventNumbers.h  ConsoleLeftPressedEvent.h  ConsolePageDownPressedEvent.h  ConsolePageUpPressedEvent.h  ConsoleReturnPressedEvent.h  ConsoleRightPressedEvent.h  ConsoleTextReceivedEvent.h  ConsoleToggledEvent.h  DecideNextDirection.cpp  DecideNextDirection.h  EmbeddingLLM.cpp  EmbeddingLLM.h  EventNumbers.h  ExploringNpc.cpp  ExploringNpc.h  GameCommands.cpp  GameCommands.h  GameErrors.txt  HaveDecided.cpp  HaveDecided.h  InputManager.cpp  InputManager.h  IsInCenterOfRoom.cpp  IsInCenterOfRoom.h  LLM.cpp  LLM.h  LLMPredctionCompleteEvent.h  LLMTokenPredictedReceived.h  LevelManager.cpp  LevelManager.h  MoveInCurrentDirection.cpp  MoveInCurrentDirection.h  MoveProbabilityMatrix.cpp  MoveProbabilityMatrix.h  (+16 more)
Tests/: LLMTests.cpp
data/: DangerLevel.xml  Khufu.xml  Level1.xml  Level2.xml  Level3.xml  Level4.xml  Level5.xml  LevelWithGameObjects.xml  RaceWay.xml  ReaceWay.xml  Resources.xml  Test.xml  balls.xml  eight.xml  line.xml  scene1.xml  scene2.xml  scene3.xml  scene4.xml  settings.xml  stu.xml
data/assets/: amg2.json  amg3.json  amg4.json  avt1.json  avt2.json  avt3.json  avt4.json  bmg1.json  bmg2.json  bmg3.json  bmg4.json  chr1.json  dvl1.json  ftr1.json  ftr2.json  ftr3.json  ftr4.json  gsd1.json  isd1.json  jli1.json  kin1.json  knt1.json  knt2.json  knt3.json  knt4.json  man1.json  man2.json  man3.json  man4.json  mnv1.json  mnv2.json  mnv3.json  mnv4.json  mst1.json  mst2.json  mst3.json  mst4.json  mtn1.json  mtn2.json  mtn3.json  (+48 more)
testdata/: Resources.xml  settings.xml
